compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__build_in_erlang_type_escaping.snap
---
source: compiler-core/src/erlang/tests.rs
expression: pub external type Map

---
-module(the_app).
-compile(no_auto_import).

-export_type([map_/0]).

-type map_() :: any().



