compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__clause_guards-14.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "\npub fn main() {\n  let x = 0\n  case x {\n    0 -> 1\n    _ -> 0\n  }\n}\n"

---
-module(the_app).
-compile(no_auto_import).

-export([main/0]).

-spec main() -> integer().
main() ->
    X = 0,
    case X of
        0 ->
            1;

        _@1 ->
            0
    end.

